# Regards

./: .gitignore  Licence.txt  Makefile  README.md  ReadMe.txt  Regards.workspace  RegardsWxWidget.sln  change.sh  compilation.sh  compilation_avx.sh  compilation_linux.sh  compilation_linux_arch.sh  compilation_linux_ubuntu20.sh  compilation_macos.sh  compilation_windows.sh  sample.xpm  version.txt
CxImage/: CMakeLists.txt  CxImage.mk  CxImage.project  CxImage.txt  cximage.vcxproj  cximage.vcxproj.filters  tif_xfile.cpp  xfile.h  ximabmp.cpp  ximabmp.h  ximacfg.h  ximadef.h  ximadsp.cpp  ximaenc.cpp  ximage.cpp  ximage.h  ximagif.cpp  ximagif.h  ximahist.cpp  ximaico.cpp  ximaico.h  ximainfo.cpp  ximaint.cpp  ximaiter.h  ximajas.cpp  ximajas.h  ximajbg.cpp  ximajbg.h  ximajpg.cpp  ximajpg.h  ximalpha.cpp  ximamng.cpp  ximamng.h  ximapal.cpp  ximapcx.cpp  ximapcx.h  ximapng.cpp  ximapng.h  ximapsd.cpp  ximapsd.h  (+17 more)
libCompress/: CMakeLists.txt  jpgd.cpp  jpge.cpp  libCompress.mk  libCompress.project  libCompress.txt  libCompress.vcxproj  libCompress.vcxproj.filters  lz4.c
libDataStructure/: BitmapEffectParameter.h  BitmapYUV.h  BrightAndContrastEffectParameter.h  CMakeLists.txt  Catalog.cpp  Catalog.h  CloudsEffectParameter.h  Country.cpp  Country.h  Criteria.cpp  Criteria.h  CxImageVideoThumbnail.h  DecodeRawParameter.h  EffectBitmapParameter.h  EffectParameter.h  EffectVideoParameter.h  FaceDescriptor.h  FaceFilePath.h  FaceName.h  FolderCatalog.cpp  FolderCatalog.h  FreeRotateEffectParameter.h  GeoPluginValue.cpp  GeoPluginValue.h  ImageLoadingFormat.cpp  ImageLoadingFormat.h  ImageVideoThumbnail.h  LensFlareEffectParameter.h  ListCriteriaPhoto.h  MainInterface.h  Metadata.h  ModificationManager.cpp  MotionBlurEffectParameter.h  MouseUpdate.h  PenDrawInfo.h  PhotoCategorie.cpp  PhotoCategorie.h  PhotoCriteria.cpp  PhotoCriteria.h  PhotoFiltreEffectParameter.h  (+49 more)
libDialog/: Association.cpp  Association.h  BmpOption.cpp  BmpOption.h  CMakeLists.txt  CategoryDetection.cpp  CategoryDetection.h  ChangeLabel.cpp  ChangeLabel.h  ChangeLabel.xrc  CompressVideo.cpp  CompressVideo.h  CompressionAudioVideoOption.cpp  CompressionAudioVideoOption.h  CompressionOption.cpp  CompressionOption.h  ConfigRegards.cpp  ConfigRegards.h  CopyFileDlg.cpp  CopyFileDlg.h  DownloadFile.cpp  DownloadFile.h  ExportFile.cpp  ExportFile.h  ExrOption.cpp  ExrOption.h  ExternalProgram.cpp  ExternalProgram.h  FaceDetection.cpp  FaceDetection.h  GifOption.cpp  GifOption.h  IndexGenerator.cpp  IndexGenerator.h  InfosSeparationBarExplorer.cpp  InfosSeparationBarExplorer.h  InterpolationFilterSelect.cpp  InterpolationFilterSelect.h  IntroTheme.cpp  IntroTheme.h  (+62 more)
libEmail/: CMakeLists.txt  LocalMapi.cpp  LocalMapi.h  MyEmail.mm  ReadMe.txt  SendEmail.cpp  SendEmail.h  email.cpp  email.h  libEmail.mk  libEmail.project  libEmail.txt  libEmail.vcxproj  libEmail.vcxproj.filters  mime.cpp  mime.h
libExif/: CMakeLists.txt  MetadataExiv2.cpp  MetadataExiv2.h  PictureMetadata.cpp  PictureMetadata.h  PictureMetadataExiv.cpp  PictureMetadataExiv.h  ReadMe.txt  libExif.mk  libExif.project  libExif.txt  libExiv2.vcxproj  libExiv2.vcxproj.filters
libGeolocalisation/: CMakeLists.txt  FileGeolocation.cpp  FileGeolocation.h  GeoPluginValue.cpp  GeoPluginValue.h  Gps.cpp  Gps.h  GpsEngine.cpp  GpsEngine.h  libGeolocalisation.mk  libGeolocalisation.project  libGeolocalisation.txt  libGeolocalisation.vcxproj  libGeolocalisation.vcxproj.filters  verifnewversion.h
libOpenCL/: CMakeLists.txt  OpenCLBm3D.cpp  OpenCLBm3D.h  OpenCLContext.cpp  OpenCLContext.h  OpenCLConvertFormat.cpp  OpenCLConvertFormat.h  OpenCLEffect.cpp  OpenCLEffect.h  OpenCLEffectVideo.cpp  OpenCLEffectVideo.h  OpenCLEffectVideoNV12.cpp  OpenCLEffectVideoNV12.h  OpenCLEffectVideoYUV.cpp  OpenCLEffectVideoYUV.h  OpenCLEngine.cpp  OpenCLEngine.h  OpenCLExecuteProgram.cpp  OpenCLExecuteProgram.h  OpenCLFilter.cpp  OpenCLFilter.h  OpenCLInfos.cpp  OpenCLInfos.h  OpenCLParameter.cpp  OpenCLParameter.h  OpenCLProgram.cpp  OpenCLProgram.h  OpenCLRawDev.cpp  OpenCLRawDev.h  ReadMe.txt  VideoStabilization.cpp  VideoStabilization.h  hqdn3d.cpp  libOpenCL.mk  libOpenCL.project  libOpenCL.txt  libOpenCL.vcxproj  libOpenCL.vcxproj.filters  utility.cpp  utility.h  (+2 more)
libParameter/: CMakeLists.txt  ConfigParam.cpp  ConfigParam.h  MainParam.h  MainParamInit.h  ParamInit.cpp  ParamInit.h  ReadMe.txt  RegardsConfigParam.cpp  RegardsConfigParam.h  ScannerParam.cpp  ScannerParam.h  ScannerParamInit.cpp  ScannerParamInit.h  ViewerParam.cpp  ViewerParam.h  ViewerParamInit.cpp  ViewerParamInit.h  libParameter.mk  libParameter.project  libParameter.txt  libParameter.vcxproj  libParameter.vcxproj.filters
libPicture/: BitmapYUV.h  BmpOption.cpp  BmpOption.h  CMakeLists.txt  CPCD.cpp  CPCD.h  CompressionOption.cpp  CompressionOption.h  DecodeRawParameter.h  DecodeRawPicture.cpp  DecodeRawPicture.h  DiaporamaFusion.cpp  DiaporamaFusion.h  DiaporamaMove.cpp  DiaporamaMove.h  DiaporamaTransition.cpp  DiaporamaTransition.h  ExrOption.cpp  ExrOption.h  FFmpegDecodeFrame.cpp  FFmpegDecodeFrame.h  FFmpegVideoThumb.cpp  FFmpegVideoThumb.h  GifOption.cpp  GifOption.h  Heic.cpp  Heic.h  ImageLoadingFormat.cpp  ImageLoadingFormat.h  ImageVideoThumbnail.h  Interpolation.cpp  Interpolation.h  InterpolationBicubic.cpp  InterpolationBicubic.h  InterpolationBilinear.cpp  InterpolationBilinear.h  InterpolationFilters.h  InterpolationFloatBicubic.cpp  InterpolationFloatBicubic.h  J2kOption.cpp  (+119 more)
libPrint/: CMakeLists.txt  PrintEngine.cpp  PrintEngine.h  ReadMe.txt  libPrint.mk  libPrint.project  libPrint.txt  libPrint.vcxproj  libPrint.vcxproj.filters
libResource/: CMakeLists.txt  ClosedHandCursor.cpp  ClosedHandCursor.h  LibResource.cpp  LibResource.h  LoadingResource.cpp  LoadingResource.h  Makefile  PictureData.cpp  PictureData.h  ReadMe.txt  SqlLibResource.cpp  SqlLibResource.h  SqlResource.cpp  SqlResource.h  libResource.mk  libResource.project  libResource.txt  libResource.vcxproj  libResource.vcxproj.filters
libSqlData/: CMakeLists.txt  Country.cpp  Country.h  Criteria.cpp  Criteria.h  FaceName.h  (+96 more)
(+6132 files in other folders)
